README_v6_6.txt
Audit AI v6.6 Professional build
- Бүх гол UI Монгол тайлбартай
- Өгөгдөл бэлтгэх / TB / Journal / Statistical Lab / Materiality дээр progress monitor
- Journal fast mode (chunk sample)
- Statistical Lab: descriptive, distribution, correlation, regression, time series, PCA, outlier, tests
- ISA/ISSAI тайлбар ба аудитын горимын санал
    st.markdown('- **Өндөр хамаарал / өндөр хазайлт**: аналитик горимыг substantive procedure-оор баталгаажуулах
                ^
SyntaxError: unterminated string literal (detected at line 423)
)
- Python compile check: True (OK)
